# game-guide-backend

./: .gitignore  DEV.md  pyproject.toml
app/: database.py  main.py  models.py
app/routers/: items.py
app/schemas/: __init__.py  item.py
src/: main.py
